[IDE] Git - Add Diff Editor & History View

--- a/ide/ui/ide-git/src/main/resources/ide-git/project.json
+++ b/ide/ui/ide-git/src/main/resources/ide-git/project.json
@@ -1,1 +1,8 @@
-{"guid":"ide-git","repository":{"type":"git","branch":"master","url":"https://github.com/dirigiblelabs/ide-git.git"}}
+{
+    "guid": "ide-git",
+    "repository": {
+        "type": "git",
+        "branch": "master",
+        "url": "https://github.com/dirigiblelabs/ide-git.git"
+    }
+}
