--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,9 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<version>3.1.1</version>
+						<configuration>
+							<source>${java.version}</source>
+						</configuration>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
