--- a/releng/sap-cms/src/main/resources/dirigible.properties
+++ b/releng/sap-cms/src/main/resources/dirigible.properties
@@ -12,21 +12,10 @@
 DIRIGIBLE_PRODUCT_NAME=${project.title}
 DIRIGIBLE_PRODUCT_VERSION=${project.version}
 DIRIGIBLE_PRODUCT_TYPE=cms
-DIRIGIBLE_INSTANCE_NAME=SAP Cloud Platform Neo
-DIRIGIBLE_REPOSITORY_PROVIDER=database
-DIRIGIBLE_REPOSITORY_DATABASE_DATASOURCE_NAME=DefaultDB
-DIRIGIBLE_DATABASE_PROVIDER=managed
-DIRIGIBLE_DATABASE_DATASOURCE_NAME_DEFAULT=DefaultDB
+DIRIGIBLE_INSTANCE_NAME=SAP Cloud Platform Neo - CMS
+DIRIGIBLE_DATABASE_PROVIDER=local
 DIRIGIBLE_CMS_PROVIDER=managed
+DIRIGIBLE_CMS_ROLES_ENABLED=true
+DIRIGIBLE_DESTINATIONS_PROVIDER=managed
 DIRIGIBLE_BPM_PROVIDER=internal
 DIRIGIBLE_HOME_URL=services/v4/web/ide-documents/
-DIRIGIBLE_DESTINATIONS_PROVIDER=managed
-DIRIGIBLE_JOB_EXPRESSION_DATA_STRUCTURES=0/30 * * * * ?
-DIRIGIBLE_JOB_EXPRESSION_EXTENSIONS=0/20 * * * * ?
-DIRIGIBLE_JOB_EXPRESSION_JOBS=0/30 * * * * ?
-DIRIGIBLE_JOB_EXPRESSION_MESSAGING=0/20 * * * * ?
-DIRIGIBLE_JOB_EXPRESSION_MIGRATIONS=0/50 * * * * ?
-DIRIGIBLE_JOB_EXPRESSION_ODATA=0/45 * * * * ?
-DIRIGIBLE_JOB_EXPRESSION_PUBLISHER=0/20 * * * * ?
-DIRIGIBLE_JOB_EXPRESSION_SECURITY=0/15 * * * * ?
-
