Fix #553 [Releng] SAP Build - CMS - add managed database option

--- a/releng/sap-cms/src/main/resources/dirigible.properties
+++ b/releng/sap-cms/src/main/resources/dirigible.properties
@@ -13,9 +13,20 @@ DIRIGIBLE_PRODUCT_NAME=${project.title}
 DIRIGIBLE_PRODUCT_VERSION=${project.version}
 DIRIGIBLE_PRODUCT_TYPE=cms
 DIRIGIBLE_INSTANCE_NAME=SAP Cloud Platform Neo - CMS
+
+# Local configuration
 DIRIGIBLE_DATABASE_PROVIDER=local
+DIRIGIBLE_REPOSITORY_PROVIDER=local
+
+# Database configuration
+#DIRIGIBLE_DATABASE_PROVIDER=managed
+#DIRIGIBLE_REPOSITORY_PROVIDER=database
+
 DIRIGIBLE_CMS_PROVIDER=managed
 DIRIGIBLE_CMS_ROLES_ENABLED=true
 DIRIGIBLE_DESTINATIONS_PROVIDER=managed
 DIRIGIBLE_BPM_PROVIDER=internal
+DIRIGIBLE_FLOWABLE_USE_DEFAULT_DATABASE=false
+DIRIGIBLE_MESSAGING_USE_DEFAULT_DATABASE=false
+
 DIRIGIBLE_HOME_URL=services/v4/web/ide-documents/
