--- a/modules/commons/commons-api/pom.xml
+++ b/modules/commons/commons-api/pom.xml
@@ -31,4 +31,12 @@
     <properties>
         <license.header.location>../../../license-header.txt</license.header.location>
     </properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-commons-config</artifactId>
+			<version>5.0.0-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 </project>
