Fixes #554 [Releng] SAP Build - CMS - CMIS based store for the Access Constraints

--- a/releng/sap-cms/src/main/resources/dirigible.properties
+++ b/releng/sap-cms/src/main/resources/dirigible.properties
@@ -30,3 +30,4 @@ DIRIGIBLE_FLOWABLE_USE_DEFAULT_DATABASE=false
 DIRIGIBLE_MESSAGING_USE_DEFAULT_DATABASE=false
 
 DIRIGIBLE_HOME_URL=services/v4/web/ide-documents/
+DIRIGIBLE_THEME_DEFAULT=fiori
