--- a/releng/sap-cf-all/pom.xml
+++ b/releng/sap-cf-all/pom.xml
@@ -142,6 +142,11 @@
 		 	<artifactId>dirigible-cms-internal</artifactId>
 		 	<version>5.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-cms-database</artifactId>
+			<version>5.0.0-SNAPSHOT</version>
+	   </dependency>
 		
 		<!-- BPM -->
 		<dependency>
