--- a/api/api-facade/api-all/pom.xml
+++ b/api/api-facade/api-all/pom.xml
@@ -77,6 +77,11 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-facade-platform</artifactId>
+            <version>5.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-api-facade-repository</artifactId>
             <version>5.0.0-SNAPSHOT</version>
         </dependency>
