--- a/api/api-facade/pom.xml
+++ b/api/api-facade/pom.xml
@@ -25,6 +25,7 @@
 		<module>api-io</module>
 		<module>api-mail</module>
 		<module>api-messaging</module>
+		<module>api-platform</module>
 		<module>api-repository</module>
 		<module>api-indexing</module>
 		<module>api-log</module>
