--- a/api/api-javascript/pom.xml
+++ b/api/api-javascript/pom.xml
@@ -55,6 +55,7 @@
 		<module>api-bpm</module>
 		<module>api-workspace</module>
 		<module>api-net</module>
+		<module>api-platform</module>
 	</modules>
 
 	<profiles>
