--- a/api/api-facade/pom.xml
+++ b/api/api-facade/pom.xml
@@ -31,6 +31,7 @@
 		<module>api-cms</module>
 		<module>api-bpm</module>
 		<module>api-workspace</module>
+		<module>api-net</module>
 	</modules>
 
 	<properties>
