--- a/api/api-facade/api-platform/pom.xml
+++ b/api/api-facade/api-platform/pom.xml
@@ -39,6 +39,37 @@
             <artifactId>dirigible-core-publisher</artifactId>
             <version>5.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-facade-core</artifactId>
+			<version>5.0.0-SNAPSHOT</version>
+    	</dependency>
+    	<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-service-repository</artifactId>
+			<version>5.0.0-SNAPSHOT</version>
+    	</dependency>
+    	<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-core-workspace</artifactId>
+			<version>5.0.0-SNAPSHOT</version>
+    	</dependency>
+    	<dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-core-generation</artifactId>
+            <version>5.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-core-generation-mustache</artifactId>
+            <version>5.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-core-generation-velocity</artifactId>
+            <version>5.0.0-SNAPSHOT</version>
+        </dependency>
+        
     </dependencies>
 
     <properties>
