--- a/releng/Dockerfile-tomcat
+++ b/releng/Dockerfile-tomcat
@@ -11,6 +11,9 @@ RUN wget http://www.dirigible.io/help/conf/tomcat-users.xml -P /usr/local/tomcat
 
 RUN wget https://repo1.maven.org/maven2/org/postgresql/postgresql/42.1.4/postgresql-42.1.4.jar -P /usr/local/tomcat/lib/
 RUN wget https://repo1.maven.org/maven2/com/sap/cloud/db/jdbc/ngdbc/2.4.63/ngdbc-2.4.63.jar -P /usr/local/tomcat/lib/
- 
-EXPOSE 8080
-CMD ["catalina.sh", "run"]
+
+ENV DIRIGBLE_JAVASCRIPT_GRAALVM_DEBUGGER_PORT=0.0.0.0:8081
+
+EXPOSE 8080 8081
+
+CMD ["catalina.sh", "jpda", "run"]
