--- a/releng/openshift-all/Dockerfile
+++ b/releng/openshift-all/Dockerfile
@@ -5,4 +5,5 @@ ARG DIRIGIBLE_VERSION=latest
 FROM dirigiblelabs/dirigible-base-platform-openshift:$DIRIGIBLE_VERSION
 
 EXPOSE 8080 8081
-CMD ["catalina.sh", "run"]
+
+CMD ["catalina.sh", "jpda", "run"]
