--- a/releng/server-runtime-keycloak/Dockerfile
+++ b/releng/server-runtime-keycloak/Dockerfile
@@ -5,4 +5,5 @@ ARG DIRIGIBLE_VERSION=latest
 FROM dirigiblelabs/dirigible-base-platform-runtime-keycloak:$DIRIGIBLE_VERSION
 
 EXPOSE 8080 8081
-CMD ["catalina.sh", "run"]
+
+CMD ["catalina.sh", "jpda", "run"]
