--- a/releng/server-runtime/Dockerfile-base
+++ b/releng/server-runtime/Dockerfile-base
@@ -13,3 +13,5 @@ RUN wget http://www.dirigible.io/help/conf/tomcat-users.xml -P /usr/local/tomcat
 
 RUN wget https://repo1.maven.org/maven2/org/postgresql/postgresql/42.1.4/postgresql-42.1.4.jar -P /usr/local/tomcat/lib/
 RUN wget https://repo1.maven.org/maven2/com/sap/cloud/db/jdbc/ngdbc/2.4.63/ngdbc-2.4.63.jar -P /usr/local/tomcat/lib/
+
+ENV DIRIGBLE_JAVASCRIPT_GRAALVM_DEBUGGER_PORT=0.0.0.0:8081
