Fixed: #568 - Server side descriptor for websocket exposure

--- a/modules/services/pom.xml
+++ b/modules/services/pom.xml
@@ -24,6 +24,7 @@
 		<module>service-theme</module>
 		<module>service-transport</module>
 		<module>service-operations</module>
+		<module>service-websockets</module>
 	</modules>
 
 	<properties>
