--- a/modules/core/core-all/pom.xml
+++ b/modules/core/core-all/pom.xml
@@ -100,6 +100,11 @@
             <artifactId>dirigible-core-migrations</artifactId>
             <version>5.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-core-websockets</artifactId>
+            <version>5.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <properties>
