--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -29,6 +29,7 @@
 		<module>core-security</module>
 		<module>core-workspace</module>
 		<module>core-migrations</module>
+		<module>core-websockets</module>
 	</modules>
 
 	<properties>
