--- a/modules/services/service-all/pom.xml
+++ b/modules/services/service-all/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>dirigible-service-operations</artifactId>
             <version>5.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-service-websockets</artifactId>
+            <version>5.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <properties>
