websockets editor and view for server side endpoints

--- a/ide/ui/pom.xml
+++ b/ide/ui/pom.xml
@@ -74,6 +74,7 @@
 		<module>ide-registry</module>
 		<module>ide-plugins</module>
 		<module>ide-discussions</module>
+		<module>ide-websockets</module>
 	</modules>
 
 	<profiles>
