--- a/ide/ui/ide-group-all/pom.xml
+++ b/ide/ui/ide-group-all/pom.xml
@@ -181,5 +181,10 @@
 			<artifactId>dirigible-ide-ui-deploy-manager</artifactId>
 			<version>5.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-ide-ui-websockets</artifactId>
+			<version>5.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
