--- a/ide/ui/ide-group-javascript/pom.xml
+++ b/ide/ui/ide-group-javascript/pom.xml
@@ -136,5 +136,10 @@
 		 	<artifactId>dirigible-ide-ui-plugins</artifactId>
 		 	<version>5.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-ide-ui-websockets</artifactId>
+		 	<version>5.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
