--- a/modules/services/service-operations/pom.xml
+++ b/modules/services/service-operations/pom.xml
@@ -59,9 +59,14 @@
         	<artifactId>dirigible-core-messaging</artifactId>
         	<version>5.0.0-SNAPSHOT</version>
         </dependency>
-         <dependency>
+        <dependency>
         	<groupId>org.eclipse.dirigible</groupId>
         	<artifactId>dirigible-database-data-structures</artifactId>
+        	<version>5.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.eclipse.dirigible</groupId>
+        	<artifactId>dirigible-core-websockets</artifactId>
         	<version>5.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
