--- a/modules/services/service-websockets/pom.xml
+++ b/modules/services/service-websockets/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>Service - Registry</name>
+	<name>Service - Websockets</name>
 	<artifactId>dirigible-service-websockets</artifactId>
     <packaging>jar</packaging>
     
@@ -44,6 +44,11 @@
 			<artifactId>dirigible-engine-api</artifactId>
 			<version>5.0.0-SNAPSHOT</version>
     	</dependency>
+    	<dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-facade-net</artifactId>
+            <version>5.0.0-SNAPSHOT</version>
+        </dependency>
         
     	<dependency>
 		    <groupId>javax.websocket</groupId>
