default value added in the template

--- a/templates/template-application-angular/src/main/resources/template-application-angular/data/application.schema.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/data/application.schema.template
@@ -33,6 +33,9 @@
 #if($property.dataScale)
                         "scale": "${property.dataScale}",
 #end
+#if($property.dataDefaultValue)
+                        "defaultValue": "${property.dataDefaultValue}",
+#end
 #if($property.dataNotNull)
 #else
                         "nullable": true,
