--- a/ide/ui/ide-group-javascript/pom.xml
+++ b/ide/ui/ide-group-javascript/pom.xml
@@ -53,8 +53,8 @@
 		</dependency>
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-ide-ui-orion</artifactId>
-		 	<version>5.0.0-SNAPSHOT</version>
+		 	<artifactId>dirigible-ide-ui-monaco</artifactId>
+		 	<version>5.0.0</version>
 		</dependency>
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
