Fixes #571 [EDM] Security Roles management the Entity/Property UIs

--- a/templates/template-application-angular/src/main/resources/template-application-angular/api/entity.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/api/entity.js.template
@@ -14,10 +14,24 @@ rs.service()
 			var entities = dao.list(queryOptions);
 			http.sendResponseOk(entities);
 		})
+		.catch(function(ctx, error) {
+            if (error.name === "ForbiddenError") {
+                http.sendForbiddenRequest(error.message);
+            } else {
+				http.sendResponseBadRequest(error.message);
+			}
+        })
 	.resource("count")
 		.get(function(ctx, request) {
 			http.sendResponseOk(dao.count());
 		})
+		.catch(function(ctx, error) {
+            if (error.name === "ForbiddenError") {
+                http.sendForbiddenRequest(error.message);
+            } else {
+				http.sendResponseBadRequest(error.message);
+			}
+        })
 	.resource("{id}")
 		.get(function(ctx) {
 			var id = ctx.pathParameters.id;
@@ -28,6 +42,13 @@ rs.service()
 				http.sendResponseNotFound("${name} not found");
 			}
 		})
+		.catch(function(ctx, error) {
+            if (error.name === "ForbiddenError") {
+                http.sendForbiddenRequest(error.message);
+            } else {
+				http.sendResponseBadRequest(error.message);
+			}
+        })
 	.resource("")
 		.post(function(ctx, request, response) {
 			var entity = request.getJSON();
@@ -35,6 +56,13 @@ rs.service()
 			response.setHeader("Content-Location", "/services/v4/js/${projectName}/api/${name}.js/" + entity.#foreach($property in $properties)#if($property.dataPrimaryKey)${property.name}#end#end);
 			http.sendResponseCreated(entity);
 		})
+		.catch(function(ctx, error) {
+            if (error.name === "ForbiddenError") {
+                http.sendForbiddenRequest(error.message);
+            } else {
+				http.sendResponseBadRequest(error.message);
+			}
+        })
 	.resource("{id}")
 		.put(function(ctx, request) {
 			var entity = request.getJSON();
@@ -42,6 +70,13 @@ rs.service()
 			dao.update(entity);
 			http.sendResponseOk(entity);
 		})
+		.catch(function(ctx, error) {
+            if (error.name === "ForbiddenError") {
+                http.sendForbiddenRequest(error.message);
+            } else {
+				http.sendResponseBadRequest(error.message);
+			}
+        })
 	.resource("{id}")
 		.delete(function(ctx) {
 			var id = ctx.pathParameters.id;
@@ -53,6 +88,13 @@ rs.service()
 				http.sendResponseNotFound("${name} not found");
 			}
 		})
+		.catch(function(ctx, error) {
+            if (error.name === "ForbiddenError") {
+                http.sendForbiddenRequest(error.message);
+            } else {
+				http.sendResponseBadRequest(error.message);
+			}
+        })
 .execute();
 #else
 rs.service()
@@ -66,5 +108,12 @@ rs.service()
 			var entities = dao.list(queryOptions);
 			http.sendResponseOk(entities);
 		})
+		.catch(function(ctx, error) {
+            if (error.name === "ForbiddenError") {
+                http.sendForbiddenRequest(error.message));
+            } else {
+				http.sendResponseBadRequest(error.message);
+			}
+        })
 .execute();
 #end
