--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/master/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/master/index.html.template
@@ -37,6 +37,16 @@
 #if($property.widgetIsMajor)
 #if($property.widgetType == "DROPDOWN")
 					<td>{{${property.name.toLowerCase()}OptionValue(next.${property.name})}}</td>
+#elseif($property.widgetType == "EMAIL")
+					<td><a href="mailto:{{next.${property.name}}}">{{next.${property.name}}}</a></td>
+#elseif($property.widgetType == "URL")
+					<td><a href="{{next.${property.name}}}" target="_blank">{{next.${property.name}}}</a></td>
+#elseif($property.widgetType == "TEL")
+					<td><a href="tel:{{next.${property.name}}}">{{next.${property.name}}}</a></td>
+#elseif($property.widgetType == "WEEK")
+					<td>{{next.${property.name} | date:weekFormat}}</td>
+#elseif($property.widgetType == "MONTH")
+					<td>{{next.${property.name} | date:monthFormat}}</td>
 #elseif($property.widgetType == "DATE")
 					<td>{{next.${property.name} | date:dateFormat}}</td>
 #elseif($property.widgetType == "CHECKBOX")
@@ -78,7 +88,7 @@
 #elseif($property.widgetType == "TEXTAREA")
 						<div class="form-group">
 							<label>#if($property.widgetLabel)${property.widgetLabel}#else${property.name}#end</label>
-							<textarea #if($property.dataNotNull)required#end #if($property.isCalculatedProperty)readonly#end class="form-control" placeholder="Enter #if($property.widgetLabel)${property.widgetLabel.toLowerCase()}#else${property.name.toLowerCase()}#end" ng-model="entity.${property.name}" ng-change="updateCalculatedProperties()"></textarea>
+							<textarea #if($property.dataNotNull)required#end #if($property.isCalculatedProperty)readonly#end #if($property.widgetPattern && $property.widgetPattern != "")pattern="${property.widgetPattern}"#end class="form-control" placeholder="Enter #if($property.widgetLabel)${property.widgetLabel.toLowerCase()}#else${property.name.toLowerCase()}#end" ng-model="entity.${property.name}" ng-change="updateCalculatedProperties()"></textarea>
 						</div>
 #elseif($property.widgetType == "NUMBER")
 						<div class="form-group">
@@ -89,6 +99,26 @@
 						<div class="form-group">
 							<label>#if($property.widgetLabel)${property.widgetLabel}#else${property.name}#end</label>
 							<input #if($property.dataNotNull)required#end #if($property.isCalculatedProperty)readonly#end type="email" class="form-control" placeholder="Enter #if($property.widgetLabel)${property.widgetLabel.toLowerCase()}#else${property.name.toLowerCase()}#end" ng-model="entity.${property.name}" ng-change="updateCalculatedProperties()">
+						</div>
+#elseif($property.widgetType == "URL")
+						<div class="form-group">
+							<label>#if($property.widgetLabel)${property.widgetLabel}#else${property.name}#end</label>
+							<input #if($property.dataNotNull)required#end #if($property.isCalculatedProperty)readonly#end type="url" class="form-control" placeholder="Enter #if($property.widgetLabel)${property.widgetLabel.toLowerCase()}#else${property.name.toLowerCase()}#end" ng-model="entity.${property.name}" ng-change="updateCalculatedProperties()">
+						</div>
+#elseif($property.widgetType == "TEL")
+						<div class="form-group">
+							<label>#if($property.widgetLabel)${property.widgetLabel}#else${property.name}#end</label>
+							<input #if($property.dataNotNull)required#end #if($property.isCalculatedProperty)readonly#end type="tel" pattern="\+?[0-9 \-]{9,16}" class="form-control" placeholder="Enter #if($property.widgetLabel)${property.widgetLabel.toLowerCase()}#else${property.name.toLowerCase()}#end" ng-model="entity.${property.name}" ng-change="updateCalculatedProperties()">
+						</div>
+#elseif($property.widgetType == "WEEK")
+						<div class="form-group">
+							<label>#if($property.widgetLabel)${property.widgetLabel}#else${property.name}#end</label>
+							<input #if($property.dataNotNull)required#end #if($property.isCalculatedProperty)readonly#end type="week" class="form-control" placeholder="Enter #if($property.widgetLabel)${property.widgetLabel.toLowerCase()}#else${property.name.toLowerCase()}#end" ng-model="entity.${property.name}" ng-change="updateCalculatedProperties()">
+						</div>
+#elseif($property.widgetType == "MONTH")
+						<div class="form-group">
+							<label>#if($property.widgetLabel)${property.widgetLabel}#else${property.name}#end</label>
+							<input #if($property.dataNotNull)required#end #if($property.isCalculatedProperty)readonly#end type="month" class="form-control" placeholder="Enter #if($property.widgetLabel)${property.widgetLabel.toLowerCase()}#else${property.name.toLowerCase()}#end" ng-model="entity.${property.name}" ng-change="updateCalculatedProperties()">
 						</div>
 #elseif($property.widgetType == "DATE")
 						<div class="form-group">
@@ -123,7 +153,7 @@
 #else
 						<div class="form-group">
 							<label>#if($property.widgetLabel)${property.widgetLabel}#else${property.name}#end</label>
-							<input #if($property.dataNotNull)required#end #if($property.isCalculatedProperty)readonly#end type="text" class="form-control" placeholder="Enter #if($property.widgetLabel)${property.widgetLabel.toLowerCase()}#else${property.name.toLowerCase()}#end" ng-model="entity.${property.name}" ng-change="updateCalculatedProperties()">
+							<input #if($property.dataNotNull)required#end #if($property.isCalculatedProperty)readonly#end type="text" #if($property.widgetPattern && $property.widgetPattern != "")pattern="${property.widgetPattern}"#end class="form-control" placeholder="Enter #if($property.widgetLabel)${property.widgetLabel.toLowerCase()}#else${property.name.toLowerCase()}#end" ng-model="entity.${property.name}" ng-change="updateCalculatedProperties()">
 						</div>
 #end
 #end
