--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/resources/js/ui-core-ng-modules.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/resources/js/ui-core-ng-modules.js.template
@@ -182,6 +182,10 @@ angular.module('ideUiCore', ['ngResource'])
 					Theme.reload();
 				}, 2000);
 			};
+			scope.resetTheme = function() {
+				localStorage.clear();
+				Theme.reload();
+			};
 			scope.logout = function() {
 				window.location.href = relativePath + 'logout';
 			};
