--- a/templates/template-application-angular/src/main/resources/template-application-angular/api/entity.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/api/entity.js.template
@@ -1,8 +1,15 @@
+#set($dollar = '$' )
 var rs = require("http/v4/rs");
 var dao = require("${projectName}/data/dao/${perspectiveName}/${name}");
 var http = require("${projectName}/api/http");
 
 #if($type != "REPORT")
+#foreach ($property in $properties)
+#if($property.widgetPattern && $property.widgetPattern != "")
+#set($isEntityPropertyPropertyEnabled = "true")
+#break
+#end 
+#end
 rs.service()
 	.resource("")
 		.get(function(ctx, request) {
@@ -17,8 +24,10 @@ rs.service()
 		.catch(function(ctx, error) {
             if (error.name === "ForbiddenError") {
                 http.sendForbiddenRequest(error.message);
-            } else {
+            } else if(error.name === "ValidationError") {
 				http.sendResponseBadRequest(error.message);
+			} else {
+				http.sendInternalServerError(error.message);
 			}
         })
 	.resource("count")
@@ -28,8 +37,10 @@ rs.service()
 		.catch(function(ctx, error) {
             if (error.name === "ForbiddenError") {
                 http.sendForbiddenRequest(error.message);
-            } else {
+            } else if(error.name === "ValidationError") {
 				http.sendResponseBadRequest(error.message);
+			} else {
+				http.sendInternalServerError(error.message);
 			}
         })
 	.resource("{id}")
@@ -45,13 +56,18 @@ rs.service()
 		.catch(function(ctx, error) {
             if (error.name === "ForbiddenError") {
                 http.sendForbiddenRequest(error.message);
-            } else {
+            } else if(error.name === "ValidationError") {
 				http.sendResponseBadRequest(error.message);
+			} else {
+				http.sendInternalServerError(error.message);
 			}
         })
 	.resource("")
 		.post(function(ctx, request, response) {
 			var entity = request.getJSON();
+#if($isEntityPropertyPropertyEnabled)
+			validateEntity(entity);
+#end
 			entity.#foreach($property in $properties)#if($property.dataPrimaryKey)${property.name}#end#end = dao.create(entity);
 			response.setHeader("Content-Location", "/services/v4/js/${projectName}/api/${name}.js/" + entity.#foreach($property in $properties)#if($property.dataPrimaryKey)${property.name}#end#end);
 			http.sendResponseCreated(entity);
@@ -59,22 +75,29 @@ rs.service()
 		.catch(function(ctx, error) {
             if (error.name === "ForbiddenError") {
                 http.sendForbiddenRequest(error.message);
-            } else {
+            } else if(error.name === "ValidationError") {
 				http.sendResponseBadRequest(error.message);
+			} else {
+				http.sendInternalServerError(error.message);
 			}
         })
 	.resource("{id}")
 		.put(function(ctx, request) {
 			var entity = request.getJSON();
 			entity.#foreach($property in $properties)#if($property.dataPrimaryKey)${property.name}#end#end = ctx.pathParameters.id;
+#if($isEntityPropertyPropertyEnabled)
+			validateEntity(entity);
+#end
 			dao.update(entity);
 			http.sendResponseOk(entity);
 		})
 		.catch(function(ctx, error) {
             if (error.name === "ForbiddenError") {
                 http.sendForbiddenRequest(error.message);
-            } else {
+            } else if(error.name === "ValidationError") {
 				http.sendResponseBadRequest(error.message);
+			} else {
+				http.sendInternalServerError(error.message);
 			}
         })
 	.resource("{id}")
@@ -91,11 +114,34 @@ rs.service()
 		.catch(function(ctx, error) {
             if (error.name === "ForbiddenError") {
                 http.sendForbiddenRequest(error.message);
-            } else {
+            } else if(error.name === "ValidationError") {
 				http.sendResponseBadRequest(error.message);
+			} else {
+				http.sendInternalServerError(error.message);
 			}
         })
 .execute();
+#if($isEntityPropertyPropertyEnabled)
+
+function ValidationError(message) {
+	this.name = "ValidationError";
+    this.message = message;
+    this.stack = (new Error()).stack;
+}
+
+function validateEntity(entity) {
+	var isValid = true;
+#foreach ($property in $properties)
+#if($property.widgetPattern && $property.widgetPattern != "")
+	isValid = isValid && entity.${property.name}.match(/^${property.widgetPattern}${dollar}/) !== null;
+#break
+#end 
+#end
+	if (!isValid) {
+		throw new ValidationError("The input data doesn't match the required property pattern");
+	}
+}
+#end
 #else
 rs.service()
 	.resource("")
