--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/resources/templates/menu.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/resources/templates/menu.html.template
@@ -38,8 +38,9 @@
 			  <li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Themes <b class="caret"></b></a>
 				<ul class="dropdown-menu">
-					<li><a href="#" data-theme="default" class="theme-link" ng-click="selectTheme('default')">Default</a></li>
-					<li><a href="#" data-theme="fiori" class="theme-link" ng-click="selectTheme('fiori')">Fiori</a></li>
+					<li><a href="#" data-theme="default" class="theme-link" ng-click="selectTheme('default')">Dark</a></li>
+					<li><a href="#" data-theme="fiori" class="theme-link" ng-click="selectTheme('fiori')">Light</a></li>
+					<li><a href="#" class="theme-link" ng-click="resetTheme()">Reset</a></li>
 				</ul>
 			  </li>				  
 			  <li class="hidden-xs">
